# twitter-watcher

./: .gitignore  Cargo.toml  docker-compose.yml  secrets.example.env
api/: Cargo.toml  Dockerfile  Rocket.toml
api/migrations/2021-12-27-012108_init_db/: up.sql
api/src/: config.rs  main.rs  twitter_api.rs
api/src/controllers/: artist_controller.rs  mod.rs
api/src/models/: artist.rs  artist_media.rs  mod.rs
watcher/: Cargo.toml  Dockerfile
watcher/src/: artist.rs  artist_media.rs  config.rs  main.rs
