[package]
name = "twitter-watcher-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4"
egg-mode = "0.16"
regex = "1.5.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]