[package]
name = "twitter-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
simple_logger = { version = "1.16.0", features = ["timestamps", "colors", "stderr"] }
tokio = { version = "1", features = ["full"] }